tests/baselines/reference/es6ImportDefaultBindingFollowedWithNamedImportWithExport.errors.txt
tests/cases/compiler/client.ts(1,15): error TS2467: External module 'server' has no default export or export assignment.
tests/cases/compiler/client.ts(2,15): error TS2467: External module 'server' has no default export or export assignment.
tests/cases/compiler/client.ts(4,15): error TS2467: External module 'server' has no default export or export assignment.
tests/cases/compiler/client.ts(6,15): error TS2467: External module 'server' has no default export or export assignment.
tests/cases/compiler/client.ts(9,15): error TS2467: External module 'server' has no default export or export assignment.
tests/cases/compiler/client.ts(11,15): error TS2467: External module 'server' has no default export or export assignment.


==== tests/cases/compiler/server.ts (0 errors) ====
    
    export var a = 10;
    export var x = a;
    export var m = a;
    
==== tests/cases/compiler/client.ts (6 errors) ====
    export import defaultBinding1, { } from "server";
                  ~~~~~~~~~~~~~~~
!!! error TS2467: External module 'server' has no default export or export assignment.
    export import defaultBinding2, { a } from "server";
                  ~~~~~~~~~~~~~~~
!!! error TS2467: External module 'server' has no default export or export assignment.
    export var x1: number = a;
    export import defaultBinding3, { a as b } from "server";
                  ~~~~~~~~~~~~~~~
!!! error TS2467: External module 'server' has no default export or export assignment.
    export var x1: number = b;
    export import defaultBinding4, { x, a as y } from "server";
                  ~~~~~~~~~~~~~~~
!!! error TS2467: External module 'server' has no default export or export assignment.
    export var x1: number = x;
    export var x1: number = y;
    export import defaultBinding5, { x as z,  } from "server";
                  ~~~~~~~~~~~~~~~
!!! error TS2467: External module 'server' has no default export or export assignment.
    export var x1: number = z;
    export import defaultBinding6, { m,  } from "server";
                  ~~~~~~~~~~~~~~~
!!! error TS2467: External module 'server' has no default export or export assignment.
    export var x1: number = m;
    